--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.1.1'
     api 'io.reactivex.rxjava2:rxjava:2.+'
-    compile project(path: ':alive')
+    compile 'com.xdandroid:hellodaemon:+'
 }
